@@ -2,6 +2,7 @@ package com.boes.deathswap;
 
 import com.boes.deathswap.commands.DeathSwapCommand;
 import com.boes.deathswap.gamelogic.DeathSwapGame;
+import com.boes.deathswap.listeners.PlayerDeathListener;  // <-- Import listener
 import org.bukkit.Bukkit;
 import org.bukkit.GameRule;
 import org.bukkit.World;
@@ -12,6 +13,8 @@ import org.bukkit.event.entity.EntityDamageByEntityEvent;
 import org.bukkit.event.player.PlayerJoinEvent;
 import org.bukkit.plugin.java.JavaPlugin;
 
+import java.util.Objects;
+
 public class DeathSwapPlugin extends JavaPlugin implements Listener {
 
     private DeathSwapGame game;
@@ -19,9 +22,9 @@ public class DeathSwapPlugin extends JavaPlugin implements Listener {
     @Override
     public void onEnable() {
         Bukkit.getPluginManager().registerEvents(this, this);
-        this.getCommand("deathswap").setExecutor(new DeathSwapCommand(this));
+        Objects.requireNonNull(this.getCommand("deathswap")).setExecutor(new DeathSwapCommand(this));
 
-        World world = Bukkit.getWorlds().get(0);
+        World world = Bukkit.getWorlds().getFirst();
         world.getWorldBorder().setSize(20);
         world.getWorldBorder().setCenter(world.getSpawnLocation());
         world.setGameRule(GameRule.DO_IMMEDIATE_RESPAWN, true);
@@ -31,6 +34,10 @@ public class DeathSwapPlugin extends JavaPlugin implements Listener {
         }
 
         game = new DeathSwapGame(this);
+
+        // Register the death listener here
+        Bukkit.getPluginManager().registerEvents(new PlayerDeathListener(game), this);
+
         getLogger().info("DeathSwap plugin enabled.");
     }
 
