@@ -3,12 +3,11 @@ package com.boes.deathswap.gamelogic;
 import com.boes.deathswap.DeathSwapPlugin;
 import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
+import org.bukkit.GameMode;
 import org.bukkit.Location;
 import org.bukkit.boss.BarColor;
 import org.bukkit.boss.BarStyle;
 import org.bukkit.boss.BossBar;
-import org.bukkit.boss.BossBar;
-import org.bukkit.boss.BarFlag;
 import org.bukkit.entity.Player;
 import org.bukkit.scheduler.BukkitRunnable;
 
@@ -19,15 +18,13 @@ import java.util.Map;
 
 public class DeathSwapGame {
 
-    private final DeathSwapPlugin plugin;
+    public final DeathSwapPlugin plugin;
 
-    private int totalTimeSeconds = 300; // default 5 minutes total game time
-    private int cooldownSeconds = 30;   // default cooldown between swaps
+    private int totalTimeSeconds = 300;
+    private int cooldownSeconds = 30;
     private boolean running = false;
     private BossBar bossBar;
     private int timeRemaining;
-
-
     private BukkitRunnable mainTask;
 
     public DeathSwapGame(DeathSwapPlugin plugin) {
@@ -42,60 +39,55 @@ public class DeathSwapGame {
 
         running = true;
 
-        // Reset world border
-        Bukkit.getWorlds().get(0).getWorldBorder().setSize(2000);
-        Bukkit.getWorlds().get(0).getWorldBorder().setCenter(0, 0);
+        Bukkit.getWorlds().getFirst().getWorldBorder().setSize(2000);
+        Bukkit.getWorlds().getFirst().getWorldBorder().setCenter(0, 0);
 
-        // Prepare players
         for (Player p : Bukkit.getOnlinePlayers()) {
             p.getInventory().clear();
-            p.setGameMode(org.bukkit.GameMode.SURVIVAL);
+            p.setGameMode(GameMode.SURVIVAL);
             p.teleport(new Location(p.getWorld(), 0.0, p.getWorld().getHighestBlockYAt(0, 0) + 1, 0.0));
             p.setHealth(20.0);
             p.setFoodLevel(20);
             p.setSaturation(20f);
             p.sendMessage(ChatColor.GREEN + "DeathSwap has started! Survive and swap wisely.");
         }
+
         bossBar = Bukkit.createBossBar("DeathSwap Time Remaining", BarColor.RED, BarStyle.SEGMENTED_20);
         bossBar.setVisible(true);
         for (Player player : Bukkit.getOnlinePlayers()) {
             bossBar.addPlayer(player);
         }
 
-        this.totalTimeSeconds = this.totalTimeSeconds; // however you're configuring it
-        this.timeRemaining = totalTimeSeconds;
+        timeRemaining = totalTimeSeconds;
 
         plugin.getLogger().info("DeathSwap started!");
 
         mainTask = new BukkitRunnable() {
 
-            private int timeLeft = totalTimeSeconds;
             private int swapCooldown = cooldownSeconds;
 
             @Override
             public void run() {
                 if (!running) {
-                    this.cancel();
+                    cancel();
                     return;
                 }
+
                 bossBar.setProgress(Math.max(0, (double) timeRemaining / totalTimeSeconds));
                 bossBar.setTitle("Time Remaining: " + formatTime(timeRemaining));
 
-                // Check number of alive players
                 List<Player> alive = getAlivePlayers();
 
                 if (alive.size() <= 1) {
-                    endGame(alive.size() == 1 ? alive.get(0) : null);
-                    this.cancel();
+                    endGame(alive.size() == 1 ? alive.getFirst() : null);
+                    cancel();
                     return;
                 }
 
-                if (timeLeft <= 0) {
-                    if (alive.size() > 1) {
-                        Bukkit.broadcastMessage(ChatColor.YELLOW + "Time's up! No one won the DeathSwap game.");
-                        endGame(null);
-                    }
-                    this.cancel();
+                if (timeRemaining <= 0) {
+                    Bukkit.broadcastMessage(ChatColor.YELLOW + "Time's up! No one won the DeathSwap game.");
+                    endGame(null);
+                    cancel();
                     return;
                 }
 
@@ -109,7 +101,7 @@ public class DeathSwapGame {
                     swapCooldown--;
                 }
 
-                timeLeft--;
+                timeRemaining--;
             }
         };
 
@@ -126,21 +118,34 @@ public class DeathSwapGame {
             bossBar = null;
         }
 
-        Bukkit.getWorlds().get(0).getWorldBorder().setSize(10);
+        Bukkit.getWorlds().getFirst().getWorldBorder().setSize(10);
 
         for (Player p : Bukkit.getOnlinePlayers()) {
             p.teleport(p.getWorld().getSpawnLocation());
-            p.setGameMode(org.bukkit.GameMode.ADVENTURE);
+            p.setGameMode(GameMode.ADVENTURE);
             p.sendMessage(ChatColor.RED + "DeathSwap has ended.");
         }
 
         plugin.getLogger().info("DeathSwap stopped!");
     }
 
+    public void onPlayerDeath(Player player) {
+        if (!running) return;
+        if (player.getGameMode() != GameMode.SPECTATOR) {
+            player.setGameMode(GameMode.SPECTATOR);
+            player.sendMessage(ChatColor.RED + "You died and are now a spectator.");
+        }
+
+        List<Player> alive = getAlivePlayers();
+        if (alive.size() <= 1) {
+            endGame(alive.size() == 1 ? alive.getFirst() : null);
+        }
+    }
+
     private List<Player> getAlivePlayers() {
         List<Player> alive = new ArrayList<>();
         for (Player p : Bukkit.getOnlinePlayers()) {
-            if (p.isOnline() && !p.isDead() && p.getGameMode() == org.bukkit.GameMode.SURVIVAL) {
+            if (p.isOnline() && !p.isDead() && p.getGameMode() == GameMode.SURVIVAL) {
                 alive.add(p);
             }
         }
@@ -163,10 +168,8 @@ public class DeathSwapGame {
 
         if (alivePlayers.size() < 2) return;
 
-        // Map to hold new data for each player
         Map<Player, PlayerData> swapData = new HashMap<>();
 
-        // Collect swap data from next player in list
         for (int i = 0; i < alivePlayers.size(); i++) {
             Player from = alivePlayers.get(i);
             Player to = alivePlayers.get((i + 1) % alivePlayers.size());
@@ -181,7 +184,6 @@ public class DeathSwapGame {
             swapData.put(from, data);
         }
 
-        // Apply all swaps now
         for (Player player : alivePlayers) {
             PlayerData data = swapData.get(player);
             if (data == null) continue;
@@ -223,6 +225,7 @@ public class DeathSwapGame {
     public void setCooldownSeconds(int cooldownSeconds) {
         this.cooldownSeconds = cooldownSeconds;
     }
+
     private String formatTime(int totalSeconds) {
         int minutes = totalSeconds / 60;
         int seconds = totalSeconds % 60;
@@ -230,4 +233,3 @@ public class DeathSwapGame {
     }
 
 }
-
